' Generated by UML Generator
' Encoded: hL9DImCn5BpdL-IebWNFHKe5FHJqqWNlCVkemMnIyhAjAFvttsi-cbhgoSkIdJTlPfXaYL65E8rMuBjnMnNKABLLYFSn1lCwHLXfxthp2V9Ml9a1f3P1Mn3Ym98FXWISXcT5z8yruDOx1FabfEo2t-DSFX7ZRktt2uQ872S2UsAx3ICTVMORYCJ0g-jJ-Wmp_ak9Q3jlXhpP7pHvjwhoOePF7SlcTybFSYaiM1Z1nMBpc7uNRSIC7MCs97QiymjQP-Pva08CkSbvxVJlmWgBqpGR7AIEpZN_iReYcUBlb9t8nxZOXdnXbFKJpk89Ej8RtGkFoNSTtvFWk-9phasK-cu8gmqimGtqd7y0
' URL: http://www.plantuml.com/plantuml/uml/hL9DImCn5BpdL-IebWNFHKe5FHJqqWNlCVkemMnIyhAjAFvttsi-cbhgoSkIdJTlPfXaYL65E8rMuBjnMnNKABLLYFSn1lCwHLXfxthp2V9Ml9a1f3P1Mn3Ym98FXWISXcT5z8yruDOx1FabfEo2t-DSFX7ZRktt2uQ872S2UsAx3ICTVMORYCJ0g-jJ-Wmp_ak9Q3jlXhpP7pHvjwhoOePF7SlcTybFSYaiM1Z1nMBpc7uNRSIC7MCs97QiymjQP-Pva08CkSbvxVJlmWgBqpGR7AIEpZN_iReYcUBlb9t8nxZOXdnXbFKJpk89Ej8RtGkFoNSTtvFWk-9phasK-cu8gmqimGtqd7y0
' Generated on: 2026-05-25T15:51:42.206831400

@startuml

class DistanceMatrixResponse {
  -rows: List<Row>
  -status: String
  --
  +getRows(): List<Row>
  +setRows(rows: List<Row>): void
  +getStatus(): String
  +setStatus(status: String): void
}

class Row {
  -elements: List<Element>
  --
  +getElements(): List<Element>
  +setElements(elements: List<Element>): void
}

class Element {
  -distance: Distance
  -status: String
  --
  +getDistance(): Distance
  +setDistance(distance: Distance): void
  +getStatus(): String
  +setStatus(status: String): void
}

class Distance {
  -value: int
  --
  +getValue(): int
  +setValue(value: int): void
}

DistanceMatrixResponse o-- Row
Row o-- Element
Element *-- Distance
@enduml